# radar

./: .gitignore  CMakeLists.txt  LICENSE  cmake-qt5.txt  filt_taps_0_3_to_0_33_80_dB_atten_0_1_dB_ripple  main.cpp  main_radar.cpp  radar.kdev4
.kdev4/: radar.kdev4
profiling/: main_filter_timing.cpp
python/: untitled0.py
python/notebooks/: Untitled.ipynb
python/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/hardware/hackrf/: proc.cpp  proc.h  scheduler.cpp  scheduler.h
src/hardware/hackrf/driver/: device_setup.h  hackrf.c
src/signal_processing/: cfar.cpp  correlator.cpp  correlator.h  fft.cpp  fft.h  tuneFilter.cpp  tuneFilter.h
src/util/: radarDataTypes.h
src/util/math/: volk_math.cpp  volk_math.h
src/util/plotting/: matplotlibcpp.h  plot.cpp  plot.h
src/waveform/: LFM.cpp  LFM.h
